<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PVPActivityPlayerSetup">

    <TextView
        android:id="@+id/enterNames"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/enterNames"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterPlayer1"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/NameHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterNames" />

    <TextView
        android:id="@+id/player2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player2"
        app:layout_constraintBottom_toTopOf="@+id/enterPlayer2"
        app:layout_constraintStart_toStartOf="@+id/enterPlayer2" />

    <TextView
        android:id="@+id/player1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player1"
        app:layout_constraintBottom_toTopOf="@+id/enterPlayer1"
        app:layout_constraintStart_toStartOf="@+id/enterPlayer1" />

    <EditText
        android:id="@+id/enterPlayer2"
        android:layout_width="230dp"
        android:layout_height="60dp"
        android:layout_marginTop="96dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/NameHint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPlayer1" />

    <Button
        android:id="@+id/playPVP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="playPVPButtonClick"
        android:text="@string/play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.309"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterPlayer2"
        app:layout_constraintVertical_bias="0.416" />

    <Button
        android:id="@+id/backToStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="backButtonClick"
        android:text="@string/backToHomePage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.234"
        app:layout_constraintStart_toEndOf="@+id/playPVP"
        app:layout_constraintTop_toBottomOf="@+id/enterPlayer2"
        app:layout_constraintVertical_bias="0.416" />
</androidx.constraintlayout.widget.ConstraintLayout>